# multiplex

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ruff.yml  test.yml
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  EXTENDING.md  MODULE_REFERENCE.md  README.md
examples/: README.md  config.yml
examples/project/example/: .marv.yml  pom.xml
examples/project/example/src/main/java/com/example/: Classifier.java
examples/project/example/src/test/java/com/example/: ClassifierTest.java
multiplex/: __main__.py  model.py  prompts.py
multiplex/approach/: util.py
multiplex/approach/basic/: code_generator.py  controller.py
multiplex/approach/hazop/: code_generator.py  controller.py  description_mutator.py  method_explainer.py
multiplex/approach/llmorpheus/: code_generator.py  controller.py  placeholders.py
multiplex/approach/mutahunter/: code_generator.py  controller.py
multiplex/approach/stpa/: code_generator.py  control_diagram.py  controller.py  uca_generator.py
multiplex/checks/: compilable.py  syntactic_equivalence.py
multiplex/execute/: defects4j.py  maven.py
multiplex/util/: extract_method.py  io.py  marv.py  marv_model.py  parser.py  rewrite_method.py
tests/: test_prompts.py
tests/checks/: test_compiles.py  test_syntactic_equivalence.py
tests/execute/: conftest.py  test_defects4j.py  test_maven.py
tests/resources/: equivalent_mutant.java  killed_mutant.java  original_method.java  uncompilable_mutant.java
tests/util/: test_extract_method.py  test_parser.py
